[tool.poetry]
name = "advent_2024"
version = "0.1.0"
description = ""
authors = ["Sarah Wessel <swessel@broadinstitute.org>"]
readme = "README.md"
packages = [{include = "advent_2024"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
